# mtsu-hackmt-2022

./: .gitignore  README.md  hackMTwindows.yaml  hackathon_2.ipynb  nlp-hackmt.yaml  project_maslow_starter_notebook.ipynb  pyproject.toml
colab_data_viz_notebooks /: sample_data_viz_notebook.ipynb
data_viz_notebooks/: sample_data_viz_notebook.ipynb
data_viz_notebooks /: sample_data_viz_notebook.ipynb
local_data_viz_notebooks/: sample_data_viz_notebook.ipynb
local_model_notebooks/: sample_model_notebook.ipynb
model_notebooks/: Tutorial_Topic_Modeling_with_Gensim_by MachineLearningPlus.ipynb  hackathon_2.ipynb  hackathon_model.ipynb  sample_model_notebook.ipynb  streamlined_nlp_topic_model_2022_01_29.ipynb
